	- Make fetching remote project's history optional
	- Cached logs for faster event log loading/switching
	- Sort event log file entries by time
	- Change default notification service to use port 80
	- Show backend error message(s) when on failed project add
	- Update Growl framework to version 1.3.1: A separate Growl 
	  is no longer needed and ready for Mountain Lion's notifications

	Travis:
	- Rewrote the notification service, now more robust and reliable


0.8.4 for Linux, Mac and Windows (Sun Mar 18 2012)

	Hylke:
	- Show initial sync progress in taskbar item on Windows 7
	- Fix "Add" item being disabled on first run
	- Fix some crashes in notfication mechanism
	- Use ~/SparkleShare instead of ~/My Documents/SparkleShare on Windows
	- Add option to add SparkleShare to startup items on Windows
	- Add SparkleShare to Explorer sidebar
	- Report whether we're sending or receiving (or both) in the status icon
	- Fix some cases where SparkleShare would incorrectly say "not synced"
	- Some UI changes on Windows to comply with the Windows HIG


0.8.3 for Linux, Mac and Windows (Sun Mar 11 2012):

        Hylke:
	- Windows version implemented with WPF
        - Invites feature: link to a host with one click
        - Implement sparklshare:// protocol handlers for invites
        - "Add SparkleShare to login items" checkbox on the last tutorial page
        - Text entries aren't being reset when selecting plugins in the setup dialog
        - A variety of new default avatars (GNOME style)
        - More useful hints below the entries in the setup dialog
        - Breadcrumbs for paths in the event log: directories can be clicked
        - Allow backends to be in separate binaries (by Shish)
        - If the dock icon is visible and has a count badge, open event log on click
        - Add previously successfully used hosts as plugins


0.8.2 for Linux and Mac (Sat Feb 11 2012):

        Hylke:
        - Use the more reliable and less resource intensive FSEvents on Mac.